--- a/index.html
+++ b/index.html
@@ -25,15 +25,32 @@
                     <button>Zoek mijn verhaal</button>
                 </div>
             </form>
+            <form action="">
+                <div>
+                    <h2>Thema</h2>
+                    <label><p>Selecteer</p><input type="checkbox"></label>
+                    <label><p>Duister / somber</p><input type="checkbox"></label>
+                    <label><p>Kinderlijk</p><input type="checkbox"></label>
+                    <label><p>Ouderwets</p><input type="checkbox"></label>
+                    <label><p>Schreewend</p><input type="checkbox"></label>
+                    <label><p>Vrolijk</p><input type="checkbox"></label>
+                    <label><p>Verward</p><input type="checkbox"></label>
+                    <label><p>Humor</p><input type="checkbox"></label>
+                    <label><p>Liefdevol</p><input type="checkbox"></label>
+                </div>
+            </form>
         </section>
     </div>
 
     <main>
+        <h2>Verhaal van de dag</h2>
         <article>
-            <img src="img/doof_eenzaam-verhaal.jpg" alt="Verhaal: Doof. Eenzame sfeer">
-            <h2>Hallo dit is een H2</h2>
+            <a href="">
+                <img src="img/doof_eenzaam-verhaal.jpg" alt="Verhaal: Doof. Eenzame sfeer">
+            </a>
+            <h3>Hallo dit is een H3</h3>
             <footer>
-                <h3>Dit is een H3</h3>
+                <span>Dit is een span</span>
                 <span>13-10-18</span>
                 <span>*****</span>
                 <span>Roy Csuka</span>
@@ -47,5 +64,4 @@
 
 
 
-
-<!-- Met pattern="" kun je regels voor je input velden toevoegen. Dit is voor je postcode: [1-9][0-9]{3}\s?[a-zA-Z]{2} -->
+<!-- Met pattern="" kun je regels voor je input velden toevoegen. Dit is bijvoorbeeld voor je postcode: [1-9][0-9]{3}\s?[a-zA-Z]{2} -->
