article gestyled en form toegevoegd

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="nl">
 <head>
     <title>Utrecht (U-OV) verhalen Overzichtspagina</title>
     <link rel="stylesheet" href="css/style.css">
@@ -62,6 +62,6 @@
     </main>
 </body>
 
-
+</html>
 
 <!-- Met pattern="" kun je regels voor je input velden toevoegen. Dit is bijvoorbeeld voor je postcode: [1-9][0-9]{3}\s?[a-zA-Z]{2} -->
