--- a/index.html
+++ b/index.html
@@ -18,28 +18,51 @@
         <a href="index.html">
             <img src="img/logo-uov.svg" alt="Utrecht (U-OV) verhalen" title="Utrecht (U-OV) verhalen">
         </a>
+        <a href="mijn-u-ov-verhalen/inloggen.html">
+            <img src="img/icons/mijn-verhalen.svg" alt="Account en login" title="Account en login">
+        </a>
+        <a href="mijn-u-ov-verhalen/inloggen.html">
+            <img src="img/icons/mijn-u-ov.svg" alt="Account en login" title="Account en login">
+        </a>
     </header>
 
     <main>
         <div>
             <section>
-                <h1><em>101</em> verhalen voor inspiratie &amp; </h1>
+                <h1><b>101</b> verhalen voor inspiratie &amp; vermaak</h1>
                 <h2>U-OV verhalen</h2>
+                <button>Vind je verhaal met filters</button>
                 <form action="">
-                    <button>Vind je verhaal met filters</button>
+                    <a href="">terug</a>
+                    <fieldset>
+                        <legend>Wat voor verhaal zoek je?</legend>
+                        <label><input type="checkbox"><span>Apart</span></label>
+                        <label><input type="checkbox"><span>Chaotisch</span></label>
+                        <label><input type="checkbox"><span>Derde persoon</span></label>
+                        <label><input type="checkbox"><span>Dialoog</span></label>
+                        <label><input type="checkbox"><span>Diepgaand</span></label>
+                        <label><input type="checkbox"><span>Enthousiast</span></label>
+                        <label><input type="checkbox"><span>Fictie</span></label>
+                        <label><input type="checkbox"><span>Gedetailleerd</span></label>
+                        <label><input type="checkbox"><span>Grof</span></label>
+                        <label><input type="checkbox"><span>Instructief</span></label>
+                        <label><input type="checkbox"><span>Kort sprekend</span></label>
+                        <label><input type="checkbox"><span>Over de top</span></label>
+                        <label><input type="checkbox"><span>Poëtisch</span></label>
+                        <label><input type="checkbox"><span>Vergezocht</span></label>
+                        <label><input type="checkbox"><span>Weinig woorden</span></label>
+                    </fieldset>
                 </form>
                 <form action="">
                     <fieldset>
-                        <legend>Thema</legend>
-                        <label><input type="checkbox"><span>Selecteer</span></label>
-                        <label><input type="checkbox"><span>Duister / somber</span></label>
-                        <label><input type="checkbox"><span>Kinderlijk</span></label>
-                        <label><input type="checkbox"><span>Ouderwets</span></label>
-                        <label><input type="checkbox"><span>Schreeuwend</span></label>
-                        <label><input type="checkbox"><span>Vrolijk</span></label>
-                        <label><input type="checkbox"><span>Verward</span></label>
-                        <label><input type="checkbox"><span>Humor</span></label>
-                        <label><input type="checkbox"><span>Liefdevol</span></label>
+                        <div>
+                            <p>Sorteer op</p>
+                            <label><input type="radio" name="sorteren" value="auteur"><span>Auteur</span></label>
+                            <label><input type="radio" name="sorteren" value="datum"><span>Datum</span></label>
+                            <label><input type="radio" name="sorteren" value="populariteit"><span>Populariteit</span></label>
+                            <a href=""><img src="./img/icons/sort-a-z.svg" alt=""></a>
+                            <button>Keuzes filteren</button>
+                        </div>
                     </fieldset>
                 </form>
             </section>
@@ -47,33 +70,29 @@
         <h2>Verhaal van de dag</h2>
         <article>
             <a href="verhaal-detail.html">
-                <img src="img/doof_eenzaam-verhaal.jpg" alt="Verhaal: Doof. Eenzame sfeer">
+                <img src="img/verhalen/Alzheimer-Poster-V2.jpg" alt="Verhaal: Doof. Eenzame sfeer">
             </a>
-            <h3>Hallo dit is een H3</h3>
+            <h3>Presentator die ten onrechte denkt aansluiting te hebben gevonden bij 'de kids'</h3>
             <footer>
-                <span>Dit is een span</span>
-                <span>13-10-18</span>
-                <span>*****</span>
-                <span>Roy Csuka</span>
-                <span>Perspectief</span>
-                <span>Gemiddeld lang verhaal</span>
+                <span>Daniel Ros</span>
+                <svg></svg>
+                <p>10</p>
+                <svg></svg>
+                <p>8</p>
             </footer>
-            <p>Tekstje onder dit mooie blokje. Hier zal iets van twee aan drie regels komen te staan.</p>
         </article>
         <article>
             <a href="verhaal-detail.html">
-                <img src="img/doof_eenzaam-verhaal.jpg" alt="Verhaal: Doof. Eenzame sfeer">
+                <img src="img/verhalen/Doof_eenzaam-verhaal-Roy-Csuka.jpg" alt="Verhaal: Doof. Eenzame sfeer">
             </a>
-            <h3>Hallo dit is een H3</h3>
+            <h3>Doof</h3>
             <footer>
-                <span>Dit is een span</span>
-                <span>13-10-18</span>
-                <span>*****</span>
                 <span>Roy Csuka</span>
-                <span>Perspectief</span>
-                <span>Gemiddeld lang verhaal</span>
+                <svg></svg>
+                <p>10</p>
+                <svg></svg>
+                <p>8</p>
             </footer>
-            <p>Tekstje onder dit mooie blokje. Hier zal iets van twee aan drie regels komen te staan.</p>
         </article>
     </main>
     <footer>
