--- a/verhaal-detail.html
+++ b/verhaal-detail.html
@@ -17,8 +17,12 @@
         <a href="index.html">
             <img src="img/logo-uov.svg" alt="Utrecht (U-OV) verhalen" title="Utrecht (U-OV) verhalen">
         </a>
-        <a href="https://www.u-ov.info/mijn-qbuzz/inloggen">Mijn U-OV</a>
-        <a href="collectie.html">Mijn collectie</a>
+        <a href="mijn-u-ov-verhalen/inloggen.html">
+            <img src="img/icons/mijn-verhalen.svg" alt="Account en login" title="Account en login">
+        </a>
+        <a href="mijn-u-ov-verhalen/inloggen.html">
+            <img src="img/icons/mijn-u-ov.svg" alt="Account en login" title="Account en login">
+        </a>
     </header>
 
     <main>
@@ -26,7 +30,7 @@
             <div>
                 <div>
                     <a href="index.html">terug</a>
-                    <button>Voeg toe aan je verhaal</button>
+                    <button><img src="img/icons/voeg-toe.svg" alt=""></button>
                 </div>
                 <h1>Verhaal van de dag</h1>
                 <footer>
@@ -44,7 +48,7 @@
                     <li>4</li>
                 </ul>
             </div>
-            <img src="img/doof_eenzaam-verhaal.jpg" alt="Verhaal: Doof. Eenzame sfeer" class="verhaal">
+            <img src="img/verhalen/Verhaal-martin%20bril-esmee%20janssen-web%20213.jpg" alt="Verhaal: Doof. Eenzame sfeer" class="verhaal">
         </article>
         <h2>Andere lezen ook</h2>
         <article>
